Alignment fixed by need percentage left and right

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p {
   font-weight: normal;
   font-style: normal;
   display: block;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;}
@@ -114,6 +115,7 @@ li {
   font-size: 400%;
   font-weight: normal;
   font-style: normal;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;}
 h1 {
@@ -122,6 +124,7 @@ h1 {
   font-weight: normal;
   font-style: normal;
   display: block;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;}
@@ -131,6 +134,7 @@ h3 {
   font-weight: normal;
   font-style: normal;
   display: block;
+  max-width: 90%;
   margin-left: auto;
   margin-right: auto;
   text-align: center;}
